# SC-ES-BMS

./: .gitmodules  README.md
BMS-Interface/: .mxproject  BMS-Interface.ioc  CMakeLists.txt  Makefile  STM32G0B1KETxN_FLASH.ld  gcc-arm-none-eabi.cmake
BMS-Interface/Core/Inc/: stm32g0xx_hal_conf.h
BMS-Interface/Core/Src/: main.c  main.cpp  stm32g0xx_hal_msp.c
BMS-Interface/modules/MAX17843/: README.md  max17843.h
BMS-Interface/modules/MAX17851/: max17851.cpp  max17851.h
BMS-Interface/modules/comunication/Inc/: config.h  error.h
BMS-Interface/modules/comunication/Src/: config.c
scripts/: MAX17843.h  doc2cpp.ipynb
